# youbot_gripper

./: README.md
src/total_assembly_gripper/: CMakeLists.txt
src/total_assembly_gripper/meshes/: link_1.STL
src/total_assembly_gripper/urdf/: total_assembly_gripper.csv
youbot_gripper/src/total_assembly_gripper/: package.xml
youbot_gripper/src/total_assembly_gripper/launch/: display.launch  gazebo.launch
youbot_gripper/src/total_assembly_gripper/meshes/: base_link.STL  link_2.STL
youbot_gripper/src/total_assembly_gripper/rviz/: urdf.rviz
youbot_gripper/src/total_assembly_gripper/scripts/: initial_config.py  set_desired_position.py
youbot_gripper/src/total_assembly_gripper/urdf/: total_assembly_gripper.urdf
